--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,143 +1,146 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: Poppins, sans-serif
 }
 
-html, body {
+body,
+html {
     height: 100%;
-    overflow: hidden;
+    overflow: hidden
 }
 
 .login-page {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: center 
 }
 
 .login-page__left-panel {
     height: 100vh;
-    background: linear-gradient(0deg, #31511E, #859F3D);
+    background: linear-gradient(0deg, #31511e, #859f3d);
     width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    text-align: center
 }
 
 .left-panel__logo {
-    width: 60%;
+    width: 60%
 }
 
 .login-page__right-panel {
     height: 100vh;
-    background-color: #1A1A19;
+    background-color: #1a1a19;
     width: 50%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center
 }
 
 .login-box {
-    padding: 0 2rem;
+    padding: 0 2rem
 }
 
 .login-box__title {
     font-size: 1.5em;
     margin-bottom: 10px;
-    color: #F6FCDF;
-    font-weight: 600;
+    color: #f6fcdf;
+    font-weight: 600
 }
 
 .login-box__subtitle {
-    color: #F6FCDF;
-    margin-bottom: 20px;
+    color: #f6fcdf;
+    margin-bottom: 20px
 }
 
 .form__input-group {
     position: relative;
-    margin-bottom: 15px;
+    margin-bottom: 15px
 }
 
 .form__input-group i {
     position: absolute;
     top: 50%;
     left: 10px;
-    transform: translateY(-50%);
+    transform: translateY(-50%)
 }
 
 .form__input {
     width: 100%;
-    padding: 10px 10px 10px 35px; 
-    border: 1px solid #859F3D;
+    padding: 10px 10px 10px 35px;
+    border: 1px solid #859f3d;
     background-color: transparent;
     border-radius: 5px;
+    color: #f6fcdf
 }
 
 .form__button {
     width: 100%;
     padding: 10px;
-    background-color: #859F3D;
-    color: #1A1A19;
+    background-color: #859f3d;
+    color: #1a1a19;
     font-size: 1em;
-    font-weight: bold;
+    font-weight: 700;
     border: none;
     border-radius: 5px;
-    cursor: pointer;
+    cursor: pointer
 }
 
 .form__button:hover {
-    background-color: #31511E;
+    background-color: #31511e
 }
 
 .login-box__signup-text {
     text-align: center;
     margin-top: 20px;
-    color: #F6FCDF;
+    color: #f6fcdf
 }
 
 .login-box__signup-link {
-    color: #859F3D;
-    text-decoration: none;
+    color: #859f3d;
+    text-decoration: none
 }
 
 .login-box__signup-link:hover {
-    text-decoration: underline;
+    text-decoration: underline
 }
 
-@media (max-width: 1000px) {
-    html, body {
-        overflow: auto;
+@media (max-width:1000px) {
+
+    body,
+    html {
+        overflow: auto
     }
 
     .login-page {
         flex-direction: column;
-        height: 100vh;
+        height: 100vh
     }
 
     .login-page__left-panel {
         width: 100%;
-        height: 40vh;
+        height: 40vh
     }
+
     .login-page__right-panel {
         width: 100%;
-        height: 60vh;
+        height: 60vh
     }
 
     .left-panel__logo {
         max-width: 300px;
-        min-width: 180px;
+        min-width: 180px
     }
 
     .login-box {
         margin-top: 2rem;
-        min-width: 247px;
+        min-width: 247px
     }
 
     .login-page__right-panel {
-        align-items: flex-start;
+        align-items: flex-start
     }
-
-    
 }
