--- a/public/views/login.html
+++ b/public/views/login.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/login.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,594;1,594&family=Poppins:ital,wght@0,400;1,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://kit.fontawesome.com/4dc72001e9.js" crossorigin="anonymous"></script>
     <title>Login Page</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
                 <form class="login-box__form" action="#" method="POST">
                     <div class="form__input-group">
                         <i class="fa-solid fa-envelope fa-sm" style="color: #f6fcdf;"></i>
-                        <input type="text" id="username" name="username" class="form__input" placeholder="Email or Username" required>
+                        <input type="email" id="email" name="email" class="form__input" placeholder="Email" required>
                     </div>
                     
                     <div class="form__input-group">
