--- a/public/css/cardfinder.css
+++ b/public/css/cardfinder.css
@@ -1,81 +1,4 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: Poppins, sans-serif
-}
-
-body,
-html {
-    height: 100%;
-    overflow: auto
-}
-
-.main-page {
-    display: flex;
-    flex-direction: column;
-    background-color: #1a1a19;
-    color: #f6fcdf;
-    padding-top: 10vh
-}
-
-.navbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: #31511e;
-    height: 10vh;
-    z-index: 5;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1rem
-}
-
-.navbar i {
-    padding: 1rem 1rem
-}
-
-.navbar__logo {
-    max-width: 70px
-}
-
-.fullscreen-menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(26, 26, 25, .95);
-    display: none;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    z-index: 10
-}
-
-.fullscreen-menu ul {
-    list-style: none;
-    padding: 0;
-    text-align: center
-}
-
-.fullscreen-menu li {
-    margin: 1.5rem 0;
-    font-size: 1.5rem;
-    color: #f6fcdf;
-    cursor: pointer
-}
-
-.fullscreen-menu i {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    font-size: 2rem;
-    cursor: pointer
-}
-
+/* Search bar */
 .search-bar {
     padding: 1rem;
     text-align: center
@@ -103,6 +26,11 @@ html {
     cursor: pointer
 }
 
+
+
+
+
+/* Filter button */
 .filter-button {
     padding: .5rem;
     background-color: #859f3d;
@@ -114,9 +42,13 @@ html {
     margin-top: 1rem
 }
 
+
+
+
+
+/* Results */
 .results {
     padding: 1rem;
-    height: 100vh
 }
 
 .result-item {
@@ -131,20 +63,12 @@ html {
     margin-bottom: .3rem
 }
 
+
+
+
+
+/* Media query for desktop */
 @media (min-width:1000px) {
-    .main-page {
-        display: flex;
-        flex-direction: column;
-        align-items: center
-    }
-
-    .content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100%
-    }
-
     .search-bar {
         justify-content: center;
         align-items: center;
