--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,15 +1,4 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    font-family: Poppins, sans-serif
-}
-
-body,
-html {
-    height: 100%;
-    overflow: hidden
-}
-
+/* Main login page */
 .login-page {
     display: flex;
     flex-direction: row;
@@ -17,6 +6,11 @@ html {
     justify-content: center 
 }
 
+
+
+
+
+/* Left panel */
 .login-page__left-panel {
     height: 100vh;
     background: linear-gradient(0deg, #31511e, #859f3d);
@@ -31,6 +25,11 @@ html {
     width: 60%
 }
 
+
+
+
+
+/* Right panel */
 .login-page__right-panel {
     height: 100vh;
     background-color: #1a1a19;
@@ -40,6 +39,7 @@ html {
     align-items: center
 }
 
+/* Login box */
 .login-box {
     padding: 0 2rem
 }
@@ -56,6 +56,7 @@ html {
     margin-bottom: 20px
 }
 
+/* Input fields */
 .form__input-group {
     position: relative;
     margin-bottom: 15px
@@ -77,6 +78,7 @@ html {
     color: #f6fcdf
 }
 
+/* Login button */
 .form__button {
     width: 100%;
     padding: 10px;
@@ -93,6 +95,8 @@ html {
     background-color: #31511e
 }
 
+
+/* Signup text */
 .login-box__signup-text {
     text-align: center;
     margin-top: 20px;
@@ -108,6 +112,11 @@ html {
     text-decoration: underline
 }
 
+
+
+
+
+/* Media query for smaller screens */
 @media (max-width:1000px) {
 
     body,
