Add new pages and update existing ones with common styles
- Add new pages for Personal Data, Cards for Trade, and Wishlist
- Update Card Finder and Login Pages with common styles and menu functionality

--- a/public/views/cardfinder.html
+++ b/public/views/cardfinder.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/cardfinder.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,594;1,594&family=Poppins:ital,wght@0,400;1,600&display=swap" rel="stylesheet">
+    <script src="../js/menu.js"></script>
     <script src="https://kit.fontawesome.com/4dc72001e9.js" crossorigin="anonymous"></script>
     <title>Card Finder</title>
 </head>
@@ -19,10 +20,10 @@
         <div id="fullscreen-menu" class="fullscreen-menu">
             <i class="fa-solid fa-times" id="close-menu" style="color: #f6fcdf;"></i>
             <ul class="menu-options">
-                <li>Card search</li>
-                <li>My personal data</li>
-                <li>Cards for trade</li>
-                <li>Wishlist</li>
+                <li><a href="cardfinder.html">CARD SEARCH</a></li>
+                <li><a href="personaldata.html">MY PERSONAL DATA</a></li>
+                <li><a href="cardsfortrade.html">CARDS FOR TRADE</a></li>
+                <li><a href="wishlist.html">WISHLIST</a></li>
             </ul>
         </div>
 
@@ -74,7 +75,5 @@
             </section>
         </main>
     </div>
-
-    <script src="../js/menu.js"></script>
 </body>
 </html>
