--- a/public/views/login.html
+++ b/public/views/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/login.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,594;1,594&family=Poppins:ital,wght@0,400;1,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;900&display=swap" rel="stylesheet">
@@ -12,11 +13,11 @@
 <body>
     <div class="login-page">
 
-        <div class="login-page__left-panel">
+        <section class="login-page__left-panel">
             <img src="../img/logo+text.svg" class="left-panel__logo" alt="Logo">
-        </div>
+        </section>
 
-        <div class="login-page__right-panel">
+        <section class="login-page__right-panel">
             <div class="login-box">
                 <h2 class="login-box__title">Login</h2>
                 <p class="login-box__subtitle">Welcome back! Please login to your account.</p>
@@ -36,7 +37,7 @@
 
                 <p class="login-box__signup-text">New User? <a href="#" class="login-box__signup-link">Sign up</a></p>
             </div>
-        </div>
+        </section>
 
     </div>
 </body>
