Update file paths in HTML views for simplified routing

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="public/css/common.css">
+    <link rel="stylesheet" href="public/css/login.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,594;1,594&family=Poppins:ital,wght@0,400;1,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4dc72001e9.js" crossorigin="anonymous"></script>
@@ -14,7 +14,7 @@
     <div class="login-page">
 
         <section class="login-page__left-panel">
-            <img src="../img/logo+text.svg" class="left-panel__logo" alt="Logo">
+            <img src="public/img/logo+text.svg" class="left-panel__logo" alt="Logo">
         </section>
 
         <section class="login-page__right-panel">
