--- a/public/views/cardfinder.html
+++ b/public/views/cardfinder.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/cardfinder.css">
+    <link rel="stylesheet" href="public/css/common.css">
+    <link rel="stylesheet" href="public/css/cardfinder.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,594;1,594&family=Poppins:ital,wght@0,400;1,600&display=swap" rel="stylesheet">
-    <script src="../js/menu.js"></script>
+    <script src="public/js/menu.js"></script>
     <script src="https://kit.fontawesome.com/4dc72001e9.js" crossorigin="anonymous"></script>
     <title>Card Finder</title>
 </head>
@@ -14,7 +14,7 @@
     <div class="main-page">
         <nav class="navbar">
             <i class="fa-solid fa-bars" id="menu-toggle" style="color: #f6fcdf;"></i>
-            <img src="../img/logo.svg" class="navbar__logo" alt="Logo">
+            <img src="public/img/logo.svg" class="navbar__logo" alt="Logo">
         </nav>
 
         <div id="fullscreen-menu" class="fullscreen-menu">
