--- a/public/views/personaldata.html
+++ b/public/views/personaldata.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="public/css/common.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;900&display=swap" rel="stylesheet">
-    <script src="../js/menu.js"></script>
+    <script src="public/js/menu.js"></script>
     <script src="https://kit.fontawesome.com/4dc72001e9.js" crossorigin="anonymous"></script>
     <title>Personal Data</title>
 </head>
@@ -14,7 +14,7 @@
         <!-- Navbar -->
         <nav class="navbar">
             <i class="fa-solid fa-bars" id="menu-toggle" style="color: #f6fcdf;"></i>
-            <img src="../img/logo.svg" class="navbar__logo" alt="Logo">
+            <img src="public/img/logo.svg" class="navbar__logo" alt="Logo">
         </nav>
 
         <!-- Fullscreen Menu -->
