feat: add dynamic suggestions for inputting collections in cardsfortrade.php and wishlist.php using datalist

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -202,6 +202,13 @@ html {
 }
 
 
+
+/* Datalist styling */
+[list]::-webkit-calendar-picker-indicator {
+    opacity: 0;
+    cursor: text;
+}
+
 /* Media query for desktop */
 @media (min-width:1000px) {
     .main-page {
