--- a/public/css/cardsearch.css
+++ b/public/css/cardsearch.css
@@ -1,14 +1,17 @@
 /* Search bar */
 .search-bar {
     padding: 1rem;
-    text-align: center
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .search-bar form {
     position: relative;
     display: inline-block;
-    width: 70%;
-    min-width: 165px
+    width: 60vw;
+    max-width: 980px;
 }
 
 .search-bar input {
@@ -27,29 +30,41 @@
 }
 
 
-
-
-
 /* Filter button */
 .filter-button {
-    padding: .5rem;
-    background-color: #859f3d;
-    color: #f6fcdf;
-    border: none;
-    border-radius: 5px;
+    width: 30vw;
+    max-width: 150px;
+    min-width: 70px;
     display: inline-block;
-    min-width: 165px;
-    margin-top: 1rem;
-    cursor: pointer;
 }
 
+.filters-title {
+    margin-bottom: 1rem;
+}
 
+.filters-title-parallels {
+    margin-top: 1rem;
+}
 
+.filters-label {
+    margin-top: 4rem;
+}
+
+.apply-filters-btn {
+    display: block;  /* ensures the element can take a width and center */
+    margin: 1.5rem auto 0 auto;
+    width: 30vw;
+    max-width: 150px;
+    min-width: 70px;
+}
 
 
 /* Results */
 .results {
+    width: 90vw;
+    margin: 0 auto;
     padding: 1rem;
+    min-width: 320px;
 }
 
 .result-item {
@@ -57,11 +72,24 @@
     margin-bottom: 1rem;
     padding: 1rem;
     border-radius: 5px;
-    min-width: 167px
+}
+
+.result-item__details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
 }
 
 .result-item__details p {
-    margin-bottom: .3rem
+    margin-bottom: 0.5rem;   /* trochę większy odstęp między wierszami */
+    line-height: 1.4;       /* poprawa czytelności tekstu */
+    word-wrap: break-word;  /* albo "overflow-wrap: break-word;" */
+    white-space: normal;    /* pozwala na normalne zawijanie linii */
+}
+
+.profile-button {
+    width: 7rem;
 }
 
 
@@ -71,11 +99,8 @@
 /* Filters panel */
 .filters-panel {
     display: none;
-    margin: 1rem 0 1rem;
+    margin-bottom: 1rem;
 }
-
-
-
 
 
 /* Pagination */
@@ -118,25 +143,41 @@
 /* Media query for desktop */
 @media (min-width:1000px) {
     .search-bar {
-        justify-content: center;
+        width: 90%;
+        max-width: 1200px;
+        flex-direction: row;
         align-items: center;
-        width: 80%;
-        max-width: 1200px
+        justify-content: center;
+        margin-top: 1rem;
     }
 
     .results {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         gap: 1rem;
-        padding: 2rem;
+        padding: 1rem;
         width: 80%;
-        max-width: 1000px
+        max-width: 1300px;
+        margin: 0 auto; /* centra grid na środku */
     }
 
     .result-item {
         background-color: #31511e;
         padding: 1rem;
         border-radius: 5px;
-        min-width: 200px
+    }
+
+    .filter-button {
+        margin-left: .5rem;
+        margin-top: 0;
+    }
+
+    .apply-filters-btn {
+        display: block;  /* ensures the element can take a width and center */
+        margin-left: 0;
+        margin-top: 1.5rem;
+        width: 30vw;
+        max-width: 150px;
+        min-width: 70px;
     }
 }
